--- a/cuttlefish_vip.conf
+++ b/cuttlefish_vip.conf
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @ScriptName        Quan Crack 脚本
+// @ScriptName        QX Crack 脚本
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          墨鱼手记
