--- a/cuttlefish_vip.conf
+++ b/cuttlefish_vip.conf
@@ -208,4 +208,4 @@ https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body
 ^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body ddhksf2013/Crack/lensa.js
 
 # > 001 moo （20200831)） by ddgksf2013
-https://diary.7english.cn:2433//api/user/userInfo url script-response-body ddhksf2013/Crack/moo.js
+https://diary.7english.cn:2433/api/user/userInfo url script-response-body ddhksf2013/Crack/moo.js
