--- a/sp_vip.conf
+++ b/sp_vip.conf
@@ -1,64 +1,64 @@
 hostname = *.fiftymvapi.*:8080,s.*.com,1.blg\d{3}.xyz,api.fiftymvapi.com:8080,m3u8.91-tv.me,api.myb6api.com:8080,api.myb6api.org:8080,api.jyjnsc.com,api.syclzg.cn,jk.5apk.cn,api-hlw.*.com,lfwmkj.com,api.sumsun.top,api.klettdayeare.com,api.kjregister.com,1008610010.laikanshu.top,api-01.apiselifan11.com,api-01.sssggg666.com:8089,api.txt2021.buzz,api.kaqcn.com,bkcd.b-cdn.net,cn.youku-ca.com,souhu.mett.me,m.pearkin.com,www.baidu.com2.club,api.papa???.com,diary.7english.cn,awmattack.*.com,mda.*.site,wx.voxpie.com
 
 #50du
-^http:\/\/(.+)\.fiftymvapi\.(.+):8080\/api\.php\/api\/.+ url script-request-header task_scripts/crack/50duh.js
-^http:\/\/(.+)\.fiftymvapi\.(.+):8080\/api\.php\/api\/user\/userinfo url script-response-body task_scripts/crack/50du.js
-^https:\/\/m3u8\.91-tv\.me\/.+ url script-response-body task_scripts/crack/50duh.js
+^http:\/\/(.+)\.fiftymvapi\.(.+):8080\/api\.php\/api\/.+ url script-request-header task_scripts/crack/50duh.js.js
+^http:\/\/(.+)\.fiftymvapi\.(.+):8080\/api\.php\/api\/user\/userinfo url script-response-body task_scripts/crack/50duh.js.js
+^https:\/\/m3u8\.91-tv\.me\/.+ url script-response-body task_scripts/crack/50duh.js.js
 
 #AVBB
-^https:\/\/s\.(.+)\.com\/s2\/.+ url script-request-header task_scripts/crack/avbb.js
+^https:\/\/s\.(.+)\.com\/s2\/.+ url script-request-header task_scripts/crack/avbb.js.js
 
 #blg
-^http?:\/\/1\.blg\d{3}\.xyz\/api\/(video\/index\/details|user\/profile\/index|user\/Profile\/index) url script-response-body task_scripts/crack/blg.js
+^http?:\/\/1\.blg\d{3}\.xyz\/api\/(video\/index\/details|user\/profile\/index|user\/Profile\/index) url script-response-body task_scripts/crack/blg.js.js
 
 #danke
-^https:\/\/ipa\.angtrend\.com\/.+ url script-request-header task_scripts/crack/danke.js
+^https:\/\/ipa\.angtrend\.com\/.+ url script-request-header task_scripts/crack/danke.js.js
 
 #blsp
-^http:\/\/api\.myb6api\.(com|org):8080\/api\.php\/api\/users\/getBaseInfo url script-response-body task_scripts/crack/blsp.js
+^http:\/\/api\.myb6api\.(com|org):8080\/api\.php\/api\/users\/getBaseInfo url script-response-body task_scripts/crack/blsp.js.js
 
 #LUTU
-^https:\/\/api\.(.+)\.(cn|com)\/.+  url script-request-header task_scripts/crack/lutu.js
+^https:\/\/api\.(.+)\.(cn|com)\/.+  url script-request-header task_scripts/crack/lutu.js.js
 
 #lajiao
-^http:\/\/jk\.5apk\.cn\/api\/(base|modulesData|reg|play) url script-response-body task_scripts/crack/lajiao.js
+^http:\/\/jk\.5apk\.cn\/api\/(base|modulesData|reg|play) url script-response-body task_scripts/crack/lajiao.js.js
 
 #dpsq
-^http:\/\/lfwmkj\.com\/(api\/user\/personal|api\/community\/edit) url script-response-body task_scripts/crack/dpsq.js
+^http:\/\/lfwmkj\.com\/(api\/user\/personal|api\/community\/edit) url script-response-body task_scripts/crack/dpsq.js.js
 
 #xcs
-^https:\/\/api\.(sumsun|klettdayeare|kjregister)\.(top|com)\/api\/user\/profile\/ url script-response-body task_scripts/crack/xcs.js
+^https:\/\/api\.(sumsun|klettdayeare|kjregister)\.(top|com)\/api\/user\/profile\/ url script-response-body task_scripts/crack/xcs.js.js
 
 #tanhua
-^https:\/\/1008610010\.laikanshu\.top\/Member\/getUserInfo url script-response-body task_scripts/crack/tanhua.js
+^https:\/\/1008610010\.laikanshu\.top\/Member\/getUserInfo url script-response-body task_scripts/crack/tanhua.js.js
 
 #slfan
-^http:\/\/api-01\.apiselifan11\.com\/cxapi\/.+ url script-request-header task_scripts/crack/slfan.js
+^http:\/\/api-01\.apiselifan11\.com\/cxapi\/.+ url script-request-header task_scripts/crack/slfan.js.js
 
 #sigua
-^http:\/\/api-01\.sssggg666\.com:8089\/cxapi\/.+ url script-request-header task_scripts/crack/sigua.js
+^http:\/\/api-01\.sssggg666\.com:8089\/cxapi\/.+ url script-request-header task_scripts/crack/sigua.js.js
 
 #sanseng
 ^http[s]?:\/\/api.(.+).(buzz|com)\/api\/user\/voucher url reject-200
-^http[s]?:\/\/api.(.+).(buzz|com)\/api\/.+  url script-request-header task_scripts/crack/sangeng.js
+^http[s]?:\/\/api.(.+).(buzz|com)\/api\/.+  url script-request-header task_scripts/crack/sangeng.js.js
 
 #Pear
-^https:\/\/(cn.youku-ca.com|bkcd\.b-cdn.net|souhu.mett.me|m.pearkin.com|www.baidu.com2.club)\/(api\/movie\/WatchMovieNew|api\/account\/IsVip|api\/account\/IndexDetail) url script-response-body task_scripts/crack/pear.js
+^https:\/\/(cn.youku-ca.com|bkcd\.b-cdn.net|souhu.mett.me|m.pearkin.com|www.baidu.com2.club)\/(api\/movie\/WatchMovieNew|api\/account\/IsVip|api\/account\/IndexDetail) url script-response-body task_scripts/crack/pear.js.js
 
 #pap
-^https:\/\/api\.papa\w+\.com(\/video\/api\/movie\/v2\/(play|[0-9]+)|\/uc\/user\/info|\/video\/api\/movie\/v2\/cache) url script-response-body papa.js
+^https:\/\/api\.papa\w+\.com(\/video\/api\/movie\/v2\/(play|[0-9]+)|\/uc\/user\/info|\/video\/api\/movie\/v2\/cache) url script-response-body papa.js.js
 
 #moo
 ^https:\/\/api\.papa\w+\.com\/live\/api\/home\/announcement\/v1\/list url reject-200
-https://diary.7english.cn:2433/api/user/userInfo url script-response-body task_scripts/crack//moo.js
+https://diary.7english.cn:2433/api/user/userInfo url script-response-body task_scripts/crack/moo.js.js
 
 
 #mlsp
-^https:\/\/awmattack\.(.+)\.com\/(api/member/info|api/video/video/video_play) url script-response-body task_scripts/crack/mlsp.js
+^https:\/\/awmattack\.(.+)\.com\/(api/member/info|api/video/video/video_play) url script-response-body task_scripts/crack/mlsp.js.js
 
 #mddsp
-^https:\/\/mda\..+\.site\/api\/(auth\/login|mine\/myHome|wallet\/query) url script-response-body task_scripts/crack/mddsp.js
+^https:\/\/mda\..+\.site\/api\/(auth\/login|mine\/myHome|wallet\/query) url script-response-body task_scripts/crack/mddsp.js.js
 ^https:\/\/mda\..+\.site\/api\/operation\/video\/buy url response-body "code":\d+ response-body "code":200
 
 #mbfm
-^http:\/\/wx\.voxpie\.com\/(api/fmapp_user|api/fmapp_bookinfo) url script-response-body task_scripts/crack/mbfm.js
+^http:\/\/wx\.voxpie\.com\/(api/fmapp_user|api/fmapp_bookinfo) url script-response-body task_scripts/crack/mbfm.js.js
